[package]
name = "nordiv"
version = "0.1.0"
repository = "https://github.com/stokowski/nordiv"
edition = "2021"
license = "Apache-2.0"

[dependencies]
configparser = "3.1.0"
clap = { version = "4.5.18", features = ["derive"] }
clap_derive = "4.5.18"
log = "0.4.22"
env_logger = "0.11.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
chrono = "0.4.38"
